<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegisterActivity">

    <include
        layout="@layout/actionbar_app"
        android:id="@+id/actionbarRegister"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_below="@id/actionbarRegister"
        android:padding="10dp">

        <TextView
            android:id="@+id/txtInfo1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sign_up"
            android:textColor="@color/black"
            android:layout_marginTop="10dp"
            android:layout_marginStart="4dp"
            android:textSize="20sp"/>

        <EditText
            android:id="@+id/txtUsernameRegister"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/uesrname" />

        <EditText
            android:id="@+id/txtEmailRegister"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:layout_marginTop="20dp" />

        <EditText
            android:id="@+id/txtPasswordRegister"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:layout_marginTop="20dp" />

        <Button
            android:id="@+id/btnRegister"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/create_acoount"
            android:backgroundTint="@color/purple_500"
            android:textColor="@color/white"
            android:layout_marginTop="10dp"/>
        <Button
            android:id="@+id/btnLoginRegister"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/login_with_your_account"
            android:backgroundTint="@color/colorAccent"
            android:textColor="@color/white"
            android:layout_marginTop="10dp"/>

    </LinearLayout>

</RelativeLayout>